# fio-planet

./: .gitignore  CHANGES  CODE_OF_CONDUCT  README.md  README.rst  conftest.py  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: check.yml  lint.yml  test.yml
docs/: commands.md  examples.rst  expressions.md  index.md  index.rst  requirements.txt  simplification.rst
docs/custom_theme/: main.html
docs/topics/: index.md  simplification.md
fio_geomod/: __init__.py
fio_geomod/scripts/: __init__.py  cli.py
src/fio_planet/: __init__.py  calculate.py  cli.py  errors.py  features.py  geomod.py  modulate.py  snuggs.py
tests/: test_cli.py  test_mod.py  test_snuggs.py
