[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "fio-planet"
version = "1.0a1"
description = "Planet Labs plugins for the Fiona CLI"
readme = "README.rst"
authors = [{name = "Sean Gillies"}]
maintainers = [
    {name = "Planet Developer Relations", email = "developers@planet.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
keywords = [
    "GeoJSON",
    "GIS",
    "CLI",
]
license = {text = "Apache License, Version 2.0"}
requires-python = ">=3.7"
dependencies = [
    "click",
    "fiona",
    "pyparsing",
    "shapely>=2.0",
]

[project.optional-dependencies]
test = ["pytest-cov"]

[project.entry-points."fiona.fio_commands"]
map = "fio_planet.cli:map_cmd"
filter = "fio_planet.cli:filter_cmd"
reduce = "fio_planet.cli:reduce_cmd"

[tool.flit.module]
name = "fio_planet"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = "src,tests"
