[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "fio-planet"
dynamic = ["version", "description"]
readme = "README.rst"
authors = [{name = "Sean Gillies"}]
maintainers = [
    {name = "Planet Developer Relations", email = "developers@planet.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
keywords = [
    "GeoJSON",
    "GIS",
    "CLI",
]
license = {text = "Apache License, Version 2.0"}
requires-python = ">=3.7"
dependencies = [
    "click",
    "fiona",
    "pyparsing",
    "shapely>=2.0",
]

[tool.flit.sdist]
exclude = [".github/", ".gitignore"]

[tool.flit.module]
name = "fio_planet"

[project.optional-dependencies]
test = ["pytest-cov"]

[project.entry-points."fiona.fio_commands"]
map = "fio_planet.cli:map_cmd"
filter = "fio_planet.cli:filter_cmd"
reduce = "fio_planet.cli:reduce_cmd"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = "src,tests"
