[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "fio_planet"
dynamic = ["version", "description"]
readme = "README.md"
authors = [{name = "Sean Gillies"}]
maintainers = [
    {name = "Planet Developer Relations", email = "developers@planet.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
keywords = [
    "GeoJSON",
    "GIS",
    "CLI",
]
requires-python = ">=3.7"
dependencies = [
    "click",
    "fiona",
    "pyparsing>=3.0",
    "shapely>=2.0",
]

[tool.flit.sdist]
exclude = [".github/", ".gitignore"]

[project.optional-dependencies]
test = ["pytest-cov"]
docs = ["mkdocs", "mkdocs-material", "mkdocs-click", "mkdocstrings"]

[project.entry-points."fiona.fio_plugins"]
map = "fio_planet.cli:map_cmd"
filter = "fio_planet.cli:filter_cmd"
reduce = "fio_planet.cli:reduce_cmd"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = "src,tests"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:.*pkg_resources is deprecated as an API",
    "ignore:.*module \\'sre_constants\\' is deprecated",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"